--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 
-<app-sidebar></app-sidebar>
+<mat-toolbar color="primary">
+    <span>Sis Gestão</span>
+</mat-toolbar>
 <router-outlet></router-outlet>
