--- a/src/app/modules/apagar/apagar-list/apagar-list.component.html
+++ b/src/app/modules/apagar/apagar-list/apagar-list.component.html
@@ -1,1 +1,45 @@
-<p>apagar-list works!</p>
+<mat-card>
+    <mat-toolbar color="primary">
+        <span>Gestão Financeira</span>
+      </mat-toolbar>
+
+      <div *ngIf="contasApagar$ | async as contasApagar; else loading ">
+            <table mat-table [dataSource]="contasApagar" class="mat-elevation-z8">
+                
+                        <!-- Position Column -->
+                      <ng-container matColumnDef="Empresa">
+                          <th mat-header-cell *matHeaderCellDef> Empresa </th>
+                          <td mat-cell *matCellDef="let element"> {{element.nomeEmpresa}} </td>
+                        </ng-container>
+              
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="Vencimento">
+                            <th mat-header-cell *matHeaderCellDef>Vencimento </th>
+                  <td mat-cell *matCellDef="let element"> {{element.dataVencimento}} </td>
+                </ng-container>
+              
+                <!-- Weight Column -->
+                <ng-container matColumnDef="Valor">
+                  <th mat-header-cell *matHeaderCellDef> Valor </th>
+                  <td mat-cell *matCellDef="let element"> {{element.valorDuplicata}} </td>
+                </ng-container>
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="Fornecedor">
+                    <th mat-header-cell *matHeaderCellDef> Fornecedor </th>
+                    <td mat-cell *matCellDef="let element"> {{element.fornecedor}} </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+    </div>
+<ng-template #loading>
+  <div class="loading-spinner">
+  <mat-spinner></mat-spinner>
+</div>
+
+</ng-template>
+</mat-card>
+  
+  
