--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-
-<mat-toolbar color="primary">
-    <span>Sis Gestão</span>
-</mat-toolbar>
+<app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
