--- a/src/app/modules/apagar/apagar-list/apagar-list.component.html
+++ b/src/app/modules/apagar/apagar-list/apagar-list.component.html
@@ -7,27 +7,49 @@
             <table mat-table [dataSource]="contasApagar" class="mat-elevation-z8">
                 
                         <!-- Position Column -->
-                      <ng-container matColumnDef="Empresa">
-                          <th mat-header-cell *matHeaderCellDef> Empresa </th>
-                          <td mat-cell *matCellDef="let element"> {{element.nomeEmpresa}} </td>
+                      <ng-container matColumnDef="EMPRESA" >
+                          <th mat-header-cell *matHeaderCellDef> EMPRESA </th>
+                          <td mat-cell *matCellDef="let element" (click)="openDialog()"> {{element.empresa.nome}} </td>
                         </ng-container>
               
                         <!-- Name Column -->
-                        <ng-container matColumnDef="Vencimento">
-                            <th mat-header-cell *matHeaderCellDef>Vencimento </th>
+                        <ng-container matColumnDef="VENCIMENTO">
+                            <th mat-header-cell *matHeaderCellDef>VENCIMENTO </th>
                   <td mat-cell *matCellDef="let element"> {{element.dataVencimento}} </td>
                 </ng-container>
               
                 <!-- Weight Column -->
-                <ng-container matColumnDef="Valor">
-                  <th mat-header-cell *matHeaderCellDef> Valor </th>
-                  <td mat-cell *matCellDef="let element"> {{element.valorDuplicata}} </td>
+                <ng-container matColumnDef="VALOR">
+                  <th mat-header-cell *matHeaderCellDef> VALOR </th>
+                  <td mat-cell *matCellDef="let element"> R$ {{element.valorDuplicata}} </td>
                 </ng-container>
               
                 <!-- Symbol Column -->
-                <ng-container matColumnDef="Fornecedor">
-                    <th mat-header-cell *matHeaderCellDef> Fornecedor </th>
+                <ng-container matColumnDef="FORNECEDOR">
+                    <th mat-header-cell *matHeaderCellDef> FORNECEDOR </th>
                     <td mat-cell *matCellDef="let element"> {{element.fornecedor}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="DATA PG">
+                  <th mat-header-cell *matHeaderCellDef> DATA PG </th>
+                  <td mat-cell *matCellDef="let element"> {{element.dataPagamento}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="SITUACAO">
+                <th mat-header-cell *matHeaderCellDef> SITUACAO</th>
+                <td mat-cell *matCellDef="let element"> {{element.situacao}} </td>
+              </ng-container>
+                  <ng-container matColumnDef="N/D">
+                    <th mat-header-cell *matHeaderCellDef> N/D</th>
+                    <td mat-cell *matCellDef="let element"> {{element.nd}} </td>
+                </ng-container>
+                  <ng-container matColumnDef="PARCELA">
+                    <th mat-header-cell *matHeaderCellDef>PARCELA</th>
+                    <td mat-cell *matCellDef="let element"> {{element.parcela}} </td>
+                </ng-container>
+                  <ng-container matColumnDef="TIPO">
+                    <th mat-header-cell *matHeaderCellDef>TIPO</th>
+                    <td mat-cell *matCellDef="let element"> {{element.tipoDespesa}} </td>
                 </ng-container>
               
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
