--- a/src/app/modules/apagar/apagar-form/apagar-form.component.html
+++ b/src/app/modules/apagar/apagar-form/apagar-form.component.html
@@ -1,16 +1,17 @@
 <mat-card>
 
-  <mat-toolbar color="primary"> Detalhes da Despesa</mat-toolbar>
+  <mat-toolbar color="primary" class="center"> Detalhes da Despesa</mat-toolbar>
 
   <mat-card-content>
 
   <form [formGroup]="form" >
     <mat-form-field class="full-width">
       <mat-label>EMPRESA</mat-label>
-      <mat-select formControlName="empresa" name="empresa">
+      <mat-select formControlName="empresaId" name="empresaId">
         <mat-option value="null"></mat-option>
-        <mat-option value="CN Muzema">Casa Nobre Muzema</mat-option>
-        <mat-option value="CN Tijuquinha">Casa Nobre Tijuquinha</mat-option>
+        <mat-option  *ngFor="let e of empresas" [value]="e.id">
+          {{e.nome}}
+        </mat-option>
       </mat-select>
     </mat-form-field>
 
@@ -38,12 +39,7 @@
       <input matInput placeholder="NÚMERO DE PARCELAS" formControlName="numeroParcelas" name="numeroParcelas">
     </mat-form-field>
 
-
-    <mat-form-field class="full-width" >
-      <input matInput placeholder="SITUAÇÃO" formControlName="situacao" name="situacao">
-      </mat-form-field>
-
-      <mat-form-field class="full-width">
+       <mat-form-field class="full-width">
         <input matInput placeholder="JUROS/MULTA" formControlName="jurosMulta" name="jurosMulta">
       </mat-form-field>
 
